# test-calendar

./: .gitignore  pyproject.toml
.github/workflows/: actions-test-with-pytest.yaml
src/baco_calendar/: __init__.py  app.py
src/baco_calendar/calendardata/: calendar.py  entry.py  entrytype.py  period.py
src/baco_calendar/exceptions/: calendarerror.py
src/baco_calendar/repositories/: abstract.py
src/baco_calendar/repositories/json/: jsonrepository.py
tests/calendardata/: test_calendar.py
tests/repositories/json/: test_jsonrepository.py
