[project]
name = "baco-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonio Ramírez", email = "morgulero@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
baco-calendar = "baco_calendar:main"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"
