[project]
name = "baco-calendar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Antonio Ramírez", email = "morgulero@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "arrow>=1.4.0",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pydantic>=2.13.4",
    "typer>=0.25.1",
]

[project.scripts]
baco-calendar = "baco_calendar:__main__"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.3",
]
